--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity"
+    tools:context=".HomeActivity"
     tools:openDrawer="start">
 
     <LinearLayout
@@ -25,17 +25,6 @@
             android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
             android:elevation="4dp"
             />
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-                <ImageButton
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:src="@drawable/ic_bookmark_black_24dp"
-                    />
-        </FrameLayout>
 
     </LinearLayout>
 
