--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/ic_navdrawer_home"
             android:title="Home" />
         <item
+            android:id="@+id/search"
+            android:icon="@drawable/ic_navdrawer_search"
+            android:title="Search" />
+        <item
             android:id="@+id/bookmarks"
             android:icon="@drawable/ic_navdrawer_bookmark"
             android:title="Bookmarks" />
@@ -16,9 +20,6 @@
             android:id="@+id/schedules"
             android:icon="@drawable/ic_navdrawer_schedule"
             android:title="Schedules" />
-    </group>
-
-    <group android:checkableBehavior="single">
         <item
             android:id="@+id/settings"
             android:icon="@drawable/ic_navdrawer_settings"
@@ -32,5 +33,7 @@
             android:icon="@drawable/ic_navdrawer_help"
             android:title="Help and Feedback" />
     </group>
+
+
 
 </menu>
